fix navbar - fix dropdown content from mobile navbar now fully expand inside - feat a seperated .navbar-desktop and .navbar-mobile (desktop version is commented) - fix added icon for collapse button

--- a/uicTest/wwwroot/sass/site.scss
+++ b/uicTest/wwwroot/sass/site.scss
@@ -239,6 +239,14 @@ nav {
     }
 }
 
+.navbar-desktop {
+    display: none;
+}
+
+.navbar-mobile {
+    display: block;
+}
+
 .navbar-expand {
     /* remove padding and margin from .navbar-expand */
     .navbar-nav {
@@ -355,6 +363,7 @@ nav-items-bar {
 }
 
 .nav-item {
+    width: 100%;
     /* START of Blazor's default */
     font-size: 0.9rem;
     /*padding: 0.5rem;*/
@@ -436,6 +445,14 @@ nav-items-bar {
 
 /*@include media($navbar-large-width) {*/
 @include media($navbar-large-width) {
+    .navbar-desktop {
+        display: block;
+    }
+
+    .nav-item {
+        width: auto;
+    }
+
     .navbar-expand {
         .navbar-nav {
             display: flex;
@@ -457,6 +474,10 @@ nav-items-bar {
         .collapse, .navbar-collapse {
             /* Never collapse the sidebar for wide screens */
             display: block !important;
+        }
+        /* hide mobile version navbar */
+        .navbar-mobile {
+            display: none !important;
         }
     }
 
